--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-transition-group": "^2.3.1",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "xlsx-populate": "^1.17.0"
   },
   "scripts": {
     "start": "react-scripts start",
